--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-
+<html>
 <head>
-<title>WAKEISTHEFIRSTOFTHEMONTH</title>
+    <title>WAKEISTHEFIRSTOFTHEMONTH</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
-<body></body>
-<header>
+<body>
+    <header>
     <img src="imagens/fotinhadeagr.png" alt="tirei essa selfie agora!" height="100">
     <h1>para entender oq se passa veja o video abaixo</h1>
     <a href="https://www.youtube.com/watch?v=wrKj6bBdn68"> link do video para enteder (veja inteiro na velocidade 0,25) </a>
     <hr>
 
-</header>
+    </header>
 
-<main>
-    <h2 style="color: crimson;">Minha opiniao sobre peste bubonica na idade média</h2>
+    <main>
+    <h2>Minha opiniao sobre peste bubonica na idade média</h2>
     <p>Na. minha opiniao. é. que. teve. sim. uma. peste. bubonica. na. idade. média. tlgd,. quem. discorda. tudo. bem., mas. eu. acho. q. nada. a. ve. isso. mano.
         como. é. que. pode. né,. peste. já. é. ruim,. imagina. uma. peste. bubonica. entao,. cruzes. longe. de. mim. isso. ai. DAVI. LUIS.</p>
         <h2>"Uma vez eu dei um BoraBill pra ve se é bom"</h2>
@@ -25,12 +26,14 @@
 
     
 
-</main>
+    </main>
 
-<footer>
+    <footer>
     <img src="imagens/Screenshot_2.png" height="200" alt="Guilherme no Podcast PODPAH conversando com Igão Underground e mitico jovem">
 
 
 
-</footer>
+
+    </footer>
 </body>
+</html>
