--- a/index.html
+++ b/index.html
@@ -3,25 +3,38 @@
 <head>
     <title>WAKEISTHEFIRSTOFTHEMONTH</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-    <img src="imagens/fotinhadeagr.png" alt="tirei essa selfie agora!" height="100">
-    <h1>para entender oq se passa veja o video abaixo</h1>
-    <a href="https://www.youtube.com/watch?v=wrKj6bBdn68"> link do video para enteder (veja inteiro na velocidade 0,25) </a>
-    <hr>
+    <img id="oi" src="imagens/fotinhadeagr.png" alt="tirei essa selfie agora!" height="100">
+    <h1>TOP 5 GOATS</h1>
+  
+   
 
     </header>
 
     <main>
-    <h2>Minha opiniao sobre peste bubonica na idade média</h2>
-    <p>Na. minha opiniao. é. que. teve. sim. uma. peste. bubonica. na. idade. média. tlgd,. quem. discorda. tudo. bem., mas. eu. acho. q. nada. a. ve. isso. mano.
-        como. é. que. pode. né,. peste. já. é. ruim,. imagina. uma. peste. bubonica. entao,. cruzes. longe. de. mim. isso. ai. DAVI. LUIS.</p>
-        <h2>"Uma vez eu dei um BoraBill pra ve se é bom"</h2>
+    <h2>TOP 1</h2>
+    <h3>Lionel messi</h3>
+    <img src="imagens/messi-autista-messi.gif" alt="messi fodao">
+    <h2>TOP 2</h2>
+    <h3>Kanye West</h3>
+    <img src="imagens/71b70c.gif" alt="kanye west jumpscare">
+    <h2>TOP 3</h2>
+    <h3>Guilherme (no Podpah)</h3>
+    <img src="imagens/Screenshot_2.png" height="200" alt="Guilherme no Podcast PODPAH conversando com Igão Underground e mitico jovem">
+    <h2>TOP 4</h2>
+    <h3>Taylor Swift com os ratos</h3>
+    <img src="imagens/download.jpeg" alt="taylor swift tomando banho com os sites">
+    <h2>TOP 5</h2>
+    <h3>Kyle com a camisa do che guevara</h3>
+    <img src="imagens/che_guevarakyle.png" alt="Kyle com a camiseta dos che guevara">
 
-            <h2>-Caio Palmar De Melo Yeezus Da Silva </h2>
-            <hr>
+
+
+
+            
 
 
     
@@ -29,7 +42,7 @@
     </main>
 
     <footer>
-    <img src="imagens/Screenshot_2.png" height="200" alt="Guilherme no Podcast PODPAH conversando com Igão Underground e mitico jovem">
+  
 
 
 
