--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>Guilherme era um membro da costa gold, e fã numero 1 do shikamaro(mario bross)
                Certo dia guilerme foi atravessar a rua, e morreu
                isso se deve porque ele foi avaliar um site e nao deu a nota 100
-               curiosamente...(Guilherme TAMBEM PODE SER QUALQUER UM, INCLUINDO VOCE Wagner Jorcuvich Nunes da Silva) 
+               curiosamente...(caio palmar dee melo escreveu esse paragrafo) 
             </p>
         </ul>
 
